Issue #232  Enhancement     - Use CLAMAV-UNOFFICIAL-SIGS maintained by eXtremeSHOK.com
Issue #239  Enhancement     - Add TxRep Config for SA 3.4.1
Issue #265  Enhancement     - Add per user mode for MailWatch
Issue #267  Bug             - SPAM bounce loop
Issue #275  Bug             - MailWatch updater adds duplicate SHOW_GREYLIST definitions
Issue #276  Bug             - EFA-Configure Option 11 logic error
Issue #286  Bug             - Postmaster set to empty interferes with postfix
Issue #287  Regression      - Rules without Descriptions (removed from beta)
Issue #294  Bug             - Attachment Release Issues in MailWatch
Issue #297  Bug             - KAM.cf URL needs updated

Sought Rules dropped (no longer maintained)

############################################################

############################################################
EFA Version 3.0.1.2-beta Changes
############################################################

Issue #92   Bug/Enhancement - Mailwatch Single Recipient Release
Issue #165  Enhancement     - Upgrade MailScanner
Issue #210  Enhancement     - Add EFA Version to GUI
Issue #228  Bug             - Greylist toggle overwrites custom smtpd_recipient_restrictions
Issue #232  Enhancement     - Use CLAMAV-UNOFFICIAL-SIGS maintained by eXtremeSHOK.com
Issue #239  Enhancement     - Add TxRep Config for SA 3.4.1
Issue #265  Enhancement     - Add per user mode for MailWatch
Issue #267  Bug             - SPAM bounce loop
Issue #275  Bug             - MailWatch updater adds duplicate SHOW_GREYLIST definitions
Issue #276  Bug             - EFA-Configure Option 11 logic error
Issue #286  Bug             - Postmaster set to empty interferes with postfix
Issue #287  Bug             - Rules without Descriptions
Issue #294  Bug             - Attachment Release Issues in MailWatch
Issue #297  Bug             - KAM.cf URL needs updated

############################################################
EFA Version 3.0.1.1 Changes